[tool.poetry]
name = "lorikeet"
version = "0.1.10"
# Don't forget to also change the version in:
# - package.json
# - docs/conf.py
description = "A simple, generic, API-only shopping cart framework for Django"
authors = ["Leigh Brenecki <leigh@brenecki.id.au>"]
license = "MIT"
readme = "README.rst"
homepage = "https://lorikeet.readthedocs.io/"
repository = "https://github.com/excitedleigh/lorikeet"

[tool.poetry.dependencies]
python = ">=3.5"
django = ">=1.8,<=2.2"
django-model-utils = "^3.2"
djangorestframework = "^3.10"
stripe = {version = "^2.41", optional = true}
premailer = {version = "^3.6", optional = true}
requests = {version = "^2.21", optional = true}

[tool.poetry.dev-dependencies]
sphinx = "~1.5.1"
sphinx-rtd-theme = "^0.1.9"
sphinx-js = "~1.3"
sphinxcontrib_httpdomain = "^1.5.0"
factory-boy = "^2.11"
tox = "^3.1"
pre-commit = "^1.20.0"
prospector = "^1.2.0"

[tool.poetry.extras]
stripe = ["stripe"]
email_invoice = ["premailer"]
starshipit = ["requests"]
