[tool.poetry]
name = "lorikeet"
version = "0.2.1"
# Don't forget to also change the version in:
# - package.json
# - docs/conf.py
description = "A simple, generic, API-only shopping cart framework for Django"
authors = ["Leigh Brenecki <leigh@brenecki.id.au>"]
license = "MIT"
readme = "README.rst"
homepage = "https://lorikeet.readthedocs.io/"
repository = "https://github.com/excitedleigh/lorikeet"

[tool.poetry.dependencies]
python = ">=3.5"
django = ">=2.2,<4"
django-model-utils = "^4.0.0"
djangorestframework = "^3.10"
stripe = {version = "^2.41", optional = true}
premailer = {version = "^3.6", optional = true}
requests = {version = "^2.21", optional = true}

[tool.poetry.dev-dependencies]
sphinx = "~1.5.1"
sphinx-rtd-theme = "^0.1.9"
sphinx-js = "~1.3"
sphinxcontrib_httpdomain = "^1.5.0"
factory-boy = "^2.11"
pre-commit = "^1.20.0"
pytest = "^5.3.2"
pytest-django = "^3.7.0"
pytest-pythonpath = "^0.7.3"

[tool.poetry.extras]
stripe = ["stripe"]
email_invoice = ["premailer"]
starshipit = ["requests"]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
